crates/gurih_dsl/tests/snapshots/error_snapshots__missing_argument_error.snap
---
source: crates/gurih_dsl/tests/error_snapshots.rs
expression: s
---
error[parse_error]: Missing or invalid argument at index 0 for node 'entity'
 --> test.kdl:2:5
  |
2 |     entity
  |     ^^^^^^ Missing or invalid argument at index 0 for node 'entity'
